--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <div id="output"></div>
 
     <script type="module">
-      import init, { generate_content } from "./pkg/content_writer_npm.js";
+      import init, { generate_content } from "./pkg/content_writer.js";
 
       async function run() {
         await init();
